math operations results

--- a/HW/HW2/report/intro.tex
+++ b/HW/HW2/report/intro.tex
@@ -1,4 +1,8 @@
 %=========================Intro====================================%
 \section{Introduction}
-This report is divided into two parts; performance analysis of the graphics card and reverse engineering to charactrize undocumneted features of the GPU. In the first part, we are going to characterize the performance of the two GPU using \protect{\wes} benchmark. The target here is to find the crossover point between the geometry/vertex stage and fragment/rasterization stage for different scenarios. Broadly speaking, the graphics pipeline overall performance is a function of the slowest of these two stages. It is well known that the geometry stage favors large primitive triangles since the speed of this stage is dependent on the operations-per-triangle. In contrast, rasterization stage favors small primitive triangles since a large triangle would require more fill operations \cite{Bethel_2010}. Unless otherwise mentioned, all the experiments presented in the report are done on NVIDIA GeForce GT 610 GPU on a Windows 7 machine with four-core Intel(R) Xeon(R) CPU of 3.7GHz and 32.0GB RAM. 
+This report is divided into two parts; performance analysis of the graphics card and reverse engineering to charactrize undocumneted features of the GPU. In the first part, we are going to characterize the performance of the two GPU using \protect{\wes} benchmark. The target here is to find the crossover point between the geometry/vertex stage and fragment/rasterization stage for different scenarios. Broadly speaking, the graphics pipeline overall performance is a function of the slowest of these two stages. It is well known that the geometry stage favors large primitive triangles since the speed of this stage is dependent on the operations-per-vertex. In contrast, rasterization stage favors small primitive triangles since a large triangle would require more fill operations \cite{Bethel_2010}.
+
+Second part is considered with detecting the precision of the graphic card. We first characterize the error associated with primitives math operations OpenGL. Additioanlly, we use a simple shader program to ensure the compliance of our GPU with IEEE-754 standards and to detect the rounding algorithm implemented. 
+
+All the experiments presented in the report are done on NVIDIA GeForce GT 610 GPU on a Windows 7 machine with four-core Intel(R) Xeon(R) CPU of 3.7GHz and 32.0GB RAM. 
 
