--- a/HW/HW2/report/mybib.bib
+++ b/HW/HW2/report/mybib.bib
@@ -43,3 +43,10 @@
   year={2013},  
   url={http://www.youi.tv/mobile-gpu-floating-point-accuracy-variances/}
 }
+@book{patterson2013computer,
+  title={Computer organization and design: the hardware/software interface},
+  author={Patterson, David A and Hennessy, John L},
+  edition={5th},
+  year={2013},
+  publisher={Newnes}
+}
