--- a/HW/HW2/report/part2.tex
+++ b/HW/HW2/report/part2.tex
@@ -12,8 +12,11 @@ Our approach was to write an OpenGl code that utilizes fragment shaders to perfo
 
 \begin{figure}[!tbh]
  \centering  
-    {\includegraphics[width=1.0\linewidth]{fig/histogram_comparison.pdf}}    
-  \caption{The average of the realative error and the maximum error between the native arithmetic function that we tested }
+ \subfloat[Average Error]
+   {\includegraphics[width=0.49\linewidth]{fig/ave_error_comparison.pdf}}
+ \subfloat[Maximum Error]
+    {\includegraphics[width=0.49\linewidth]{fig/max_error_comparison.pdf}}         
+  \caption{Average and maximum relative error for few basic arithmetic operations.}
    \label{fig:histogram_comparison}
 \end{figure} 
 
