--- a/HW/HW2/report/part2.tex
+++ b/HW/HW2/report/part2.tex
@@ -20,7 +20,7 @@ Our approach was to write an OpenGl code that utilizes fragment shaders to perfo
    \label{fig:histogram_comparison}
 \end{figure} 
 
-We conduct the test for each of our functions by giving it a series of inputs starting from 0.1 and ending at 100 with an increment of 0.01 between each input values. Then we calculate how much the GPU results deviate form the CPU results and average that thoughout our iterations. Also we keep track of the maximum instance of error to give us an idea of how bad the worest case scenario can be. From figure 5 we can conclude that the sinusoidal fuction usually have higher error on our GPU. The average relative error for Sin was the highest among all fuctions also it had the worest case scenario ever. On the other hand the logarithmic function had the least error among all functions. However, the maximum value of the error of the log function was almost 1000 times as much as the average case. We can infer that the GPU implementation of the log is not as reliable as the other fuctions since some time its precision can vary dramatically.
+We conducted the test for each of our functions by giving it a series of inputs starting from 0.1 and ending at 100 with an increment of 0.01 between each input values. Then we calculated how much the GPU results deviate from the CPU results and averaged that throughout our iterations. Also we kept track of the maximum instance of error to give us an idea of how bad the worst case scenario can be. From figure 5b we can conclude that the sinusoidal functions usually have higher error on our GPU. The average relative error for Cos was the highest among all functions. In addition, Sin had the worst case scenario ever. On the other hand, the Square root function had the least error among all functions. It's worth mentioning that in the logarithmic function, the maximum value of the error of the log function was almost 1 million times as much as the average case. We can infer that the GPU implementation of the log is not as reliable as the other functions since some time its precision can vary dramatically.
 
 \begin{figure}[!tbh]
  \centering  
